# luci-sso

./: .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  STYLE_GUIDE.md  TIERED_TESTS.md  compile_flags.txt  dev.mk  docker-compose.yml
.github/workflows/: build-images.yml  ci.yml  on_demand_build.yml
devenv/: .gitignore  MULTIARCH.md  Makefile  README.md  base-startup.sh  docker-compose.ci.yaml  docker-compose.e2e.yaml  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml
devenv/builder/: Dockerfile
devenv/idp/: index.js
devenv/runner/: Dockerfile  start-services.sh
devenv/scripts/: resolve-arch.sh  test.sh
src/: CMakeLists.txt  crypto_mbedtls.c  crypto_wolfssl.c  native_mbedtls.c  native_wolfssl.c
test/: README.md  fixtures.uc  mock.uc  runner.uc  specification.uc  testing.uc
test/e2e/: 02-sso-login.spec.js  03-security.spec.js  04-ui-injection.spec.js  05-conditional-ui.spec.js  06-protocol-security.spec.js  security.spec.js  sso-login.spec.js
test/integration/: fixtures.uc  router_test.uc
test/lib/: helpers.uc
test/meta/: mock_test.uc
test/mock-idp/: Dockerfile  index.js
test/mocks/: fs.uc  uclient.uc
test/testing/: assertions.uc  colors.uc  compact_reporter.uc  detailed_reporter.uc  loader.uc  matcher.uc  runner.uc  status.uc
test/tier0/: fixtures.uc  native_compliance_test.uc  native_compliance_test_extra.uc  native_hardening_test.uc  native_jwk_test.uc  native_weak_rsa_test.uc
test/tier1/: crypto_claims_test.uc  crypto_constant_time_test.uc  crypto_dos_reproduction_test.uc  crypto_plumbing_test.uc  encoding_https_test.uc  encoding_security_test.uc  encoding_url_normalization_test.uc  encoding_url_test.uc
test/tier2/: config_case_insensitive_test.uc  config_scope_test.uc  config_validation_reproduction_test.uc  discovery_cache_reproduction_test.uc  discovery_constant_time_test.uc  discovery_reproduction_test.uc  discovery_resilience_test.uc  discovery_security_test.uc  dos_security_test.uc  fuzz_logic_test.uc  handshake_dos_reproduction_test.uc  handshake_rotation_test.uc  handshake_split_horizon_test.uc  handshake_state_consumption_test.uc  handshake_userinfo_test.uc  handshake_warning_test.uc  logout_csrf_test.uc  logout_security_reproduction_test.uc  logout_security_test.uc  oidc_logic_test.uc  oidc_security_test.uc  oidc_url_fragment_test.uc  router_enabled_reproduction_test.uc  router_logout_redirect_test.uc  security_logic_test_extra.uc  session_busy_wait_test.uc  session_expiry_security_test.uc  session_key_generation_failure_test.uc  session_logic_test.uc  session_race_test.uc  session_write_fail_test.uc  ubus_acl_security_test.uc  ubus_logic_test.uc  web_logic_test.uc  web_security_headers_reproduction_test.uc  web_status_coercion_test.uc
test/tier3/: fixtures.uc  io_sleep_test.uc  router_test.uc
test/tier4/: mock_test.uc
test/unit/: config_case_insensitive_test.uc  config_group_test.uc  config_https_case_test.uc  config_logic_test.uc  config_role_test.uc  config_scope_test.uc  config_test.uc  config_validation_reproduction_test.uc  crypto_constant_time_test.uc  crypto_dos_reproduction_test.uc  crypto_fuzz_test.uc  crypto_native_test.uc  crypto_plumbing_test.uc  crypto_test.uc  helpers.uc  (+51 more)
(+44 files in other folders)
