cmake_minimum_required(VERSION 3.10)
project(ucode_native_modules C)

find_library(UCODE_LIB ucode)
find_library(MBEDTLS_LIB mbedtls)
find_library(MBEDX509_LIB mbedx509)
find_library(MBEDCRYPTO_LIB mbedcrypto)
find_library(WOLFSSL_LIB wolfssl)

# 1. mbedTLS Target
if(MBEDTLS_LIB AND MBEDX509_LIB AND MBEDCRYPTO_LIB)
    message(STATUS "mbedTLS found, adding native_mbedtls target")
    add_library(native_mbedtls SHARED native_mbedtls.c)
    set_target_properties(native_mbedtls PROPERTIES PREFIX "")
    target_link_libraries(native_mbedtls ${UCODE_LIB} ${MBEDTLS_LIB} ${MBEDX509_LIB} ${MBEDCRYPTO_LIB})
    install(TARGETS native_mbedtls DESTINATION lib/ucode)
else()
    message(WARNING "mbedTLS not found, skipping native_mbedtls")
endif()

# 2. wolfSSL Target
if(WOLFSSL_LIB)
    message(STATUS "wolfSSL found, adding native_wolfssl target")
    add_library(native_wolfssl SHARED native_wolfssl.c)
    set_target_properties(native_wolfssl PROPERTIES PREFIX "")
    target_link_libraries(native_wolfssl ${UCODE_LIB} ${WOLFSSL_LIB})
    install(TARGETS native_wolfssl DESTINATION lib/ucode)
else()
    message(WARNING "wolfSSL not found, skipping native_wolfssl")
endif()